--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
         <link href="./website/css/slideout.css" rel="stylesheet"/>
     </head>
     <body>
+        <div class="loader" style="text-align:center; margin-top:10%;">
+          <img src="./website/assets/loader.gif" />
+        </div>
         <script type="text/javascript" src="./bower_components/requirejs/require.js"></script>
         <script type="text/javascript" src="./website/js/require.config.js"></script>
         <script type="text/javascript" src="./website/js/main.js"></script>
