working on #4 and #14

--- a/404.html
+++ b/404.html
@@ -39,15 +39,15 @@
     /_______  /\_______  /\___  /     |____|    \__/\  /\____|__  /____|_  /_______  /
             \/         \/     \/                     \/         \/       \/        \/
 
-                Copyright 20014 Wolk Software Limited - All rights reserved
+                Copyright 2014 Wolk Software Limited - All rights reserved
 -->
 <html lang="en">
-    <head>
-        <title>Wolk Software Limited - Error 404</title>
-    </head>
-    <body>
-        <!-- JS -->
-        <script src="/website/lib//jquery/jquery-1.10.2.min.js"></script>
-        <script src="/website/js/404.js"></script>
-    </body>
+  <head>
+      <title>Wolk Software Limited - Error 404</title>
+  </head>
+  <body>
+      <!-- JS -->
+      <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+      <script src="/website/js/404.js"></script>
+  </body>
 </html>
