--- a/index.html
+++ b/index.html
@@ -1,4 +1,47 @@
 <!DOCTYPE html>
+<!--
+                                                       __
+                                                     .d$$b
+                                                   .' TO$;\
+                                                  /  : TP._;
+                                                 / _.;  :Tb|
+                                                /   /   ;j$j
+                                            _.-"       d$$$$
+                                          .' ..       d$$$$;
+                                         /  /P'      d$$$$P. |\
+                                        /   "      .d$$$P' |\^"l
+                                      .'           `T$P^"""""  :
+                                  ._.'      _.'                ;
+                               `-.-".-'-' ._.       _.-"    .-"
+                             `.-" _____  ._              .-"
+                            -(.g$$$$$$$b.              .'
+                              ""^^T$$$P^)            .(:
+                                _/  -"  /.'         /:/;
+                             ._.'-'`-'  ")/         /;/;
+                          `-.-"..--""   " /         /  ;
+                         .-" ..--""        -'          :
+                         ..--""--.-"         (\      .-(\
+                           ..--""              `-\(\/;`
+                             _.                      :
+                                                     ;`-
+                                                    :\
+                                                    ;
+                         __      __________  .____     ____  __.
+                        /  \    /  \_____  \ |    |   |    |/ _|
+                        \   \/\/   //   |   \|    |   |      <
+                         \        //    |    \    |___|    |  \
+                          \__/\  / \_______  /_______ \____|__ \
+                               \/          \/        \/       \/
+      _________________  ________________________      __  _____ _____________________
+     /   _____/\_____  \ \_   _____/\__    ___/  \    /  \/  _  \\______   \_   _____/
+     \_____  \  /   |   \ |    __)    |    |  \   \/\/   /  /_\  \|       _/|    __)_
+     /        \/    |    \|     \     |    |   \        /    |    \    |   \|        \
+    /_______  /\_______  /\___  /     |____|    \__/\  /\____|__  /____|_  /_______  /
+            \/         \/     \/                     \/         \/       \/        \/
+
+                Copyright 2014 Wolk Software Limited - All rights reserved
+-->
+<!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8"/>
