--- a/index.html
+++ b/index.html
@@ -1,4 +1,32 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8"/>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+        <meta name="viewport" content="width=device-width"/>
+        <meta name="apple-mobile-web-app-capable" content="yes" />
+        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
+        <meta name="description" content="Remo H. Jansen - Professional Software Engineer"/>
+        <meta name="author" content="Remo H. Jansen"/>
+        <meta name="keywords" content="web, development, software, engineer, .net, javascript, html5, css3, css, html, dublin, ireland, jquery, cv, node.js"/>
+        <link rel="shortcut icon" href="./website/assets/favicon.png"/>
+        <title>Remo H. Jansen - Professional Software Engineer</title>
+        <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
+        <link href="./bower_components/animate.css/animate.min.css" rel="stylesheet"/>
+        <link href="./bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet"/>
+        <link href="./website/css/bootstrap-sons-of-obsidian.css" rel="stylesheet"/>
+        <link href="./website/css/style.css" rel="stylesheet"/>
+        <link href="./website/css/slideout.css" rel="stylesheet"/>
+    </head>
+    <body>
+        <div class="loader" style="text-align:center; margin-top:10%;">
+          <img src="./website/assets/loader.gif" />
+        </div>
+        <script type="text/javascript" src="./bower_components/requirejs/require.js"></script>
+        <script type="text/javascript" src="./website/js/require.config.js"></script>
+        <script type="text/javascript" src="./website/js/bundle.min.js"></script>
+    </body>
+</html>
 <!--
                                                        __
                                                      .d$$b
@@ -41,32 +69,3 @@
 
                 Copyright 2014 Wolk Software Limited - All rights reserved
 -->
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="utf-8"/>
-        <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-        <meta name="viewport" content="width=device-width"/>
-        <meta name="apple-mobile-web-app-capable" content="yes" />
-        <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
-        <meta name="description" content="Remo H. Jansen - Professional Software Engineer"/>
-        <meta name="author" content="Remo H. Jansen"/>
-        <meta name="keywords" content="web, development, software, engineer, .net, javascript, html5, css3, css, html, dublin, ireland, jquery, cv, node.js"/>
-        <link rel="shortcut icon" href="./website/assets/favicon.png"/>
-        <title>Remo H. Jansen - Professional Software Engineer</title>
-        <link href="./bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet"/>
-        <link href="./bower_components/animate.css/animate.min.css" rel="stylesheet"/>
-        <link href="./bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet"/>
-        <link href="./website/css/bootstrap-sons-of-obsidian.css" rel="stylesheet"/>
-        <link href="./website/css/style.css" rel="stylesheet"/>
-        <link href="./website/css/slideout.css" rel="stylesheet"/>
-    </head>
-    <body>
-        <div class="loader" style="text-align:center; margin-top:10%;">
-          <img src="./website/assets/loader.gif" />
-        </div>
-        <script type="text/javascript" src="./bower_components/requirejs/require.js"></script>
-        <script type="text/javascript" src="./website/js/require.config.js"></script>
-        <script type="text/javascript" src="./website/js/main.js"></script>
-    </body>
-</html>
