--- a/index.html
+++ b/index.html
@@ -24,16 +24,19 @@
         </div>
         <script type="text/javascript" src="./bower_components/requirejs/require.js"></script>
         <script type="text/javascript" src="./website/js/require.config.js"></script>
-        <script type="text/javascript" src="./website/js/bundle.min.js"></script>
+        <script type="text/javascript" src="./website/js/main.js"></script>
         <script>
-          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          (function(i,s,o,g,r,a,m){
+            if(window.location.protocol !== "file:") {
+              i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+              (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+
+              ga('create', 'UA-61585711-1', 'auto');
+              ga('send', 'pageview');
+            }
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-        
-          ga('create', 'UA-61585711-1', 'auto');
-          ga('send', 'pageview');
-        </script>    
+        </script>
     </body>
 </html>
 <!--
