--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <img src="./website/assets/loader.gif" />
         </div>
         <script type="text/javascript" src="./bower_components/requirejs/require.js"></script>
-        <script type="text/javascript" src="./website/js/require.config.js"></script>
+        <!--script type="text/javascript" src="./website/js/require.config.js"></script -->
         <script type="text/javascript" src="./website/js/bundle.min.js"></script>
         <script>
           (function(i,s,o,g,r,a,m){
