working on TS talk

--- a/talks/data/slide.html
+++ b/talks/data/slide.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <link rel="icon" href="../media/favicon.ico">
-        <title>Hackathon Open-Source Salesianos Triana</title>
+        <title>Remo H. Jansen Talks</title>
         <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
         <link href="../css/slides.css" rel="stylesheet">
         <link href="../bower_components/fontawesome/css/font-awesome.min.css" rel="stylesheet">
